@@ -1,4 +1,5 @@
 # Version 0.5.0
+- Tool "Curve intersect axis" store data about subpaths. 
 - [#444] Length along Path seems not valid.
 - Added new curve path segment variables. 
 - Toggle ScrollHandDrag mode by clicking a middle mouse button.
